Arrumando erro na validação de strings em branco